--- a/Logistics.UILayer/Views/Shared/_AdminLayout.cshtml
+++ b/Logistics.UILayer/Views/Shared/_AdminLayout.cshtml
@@ -75,6 +75,8 @@
     <div class="sidebar">
         <a class="active" href="/Default/Index/">Ana Sayfa</a>
         <a href="/Category/Index/">Kategoriler</a>
+        <a href="/City/Index/">Şehirler</a>
+        <a href="/Register/Index/">Kayıt</a>
         <a href="#contact">İletişim</a>
         <a href="#about">Müşteriler</a>
         <a href="#about">Sosyal Medya Hesapları</a>
