--- a/Logistics.UILayer/Views/Shared/_NewAdminLayout.cshtml
+++ b/Logistics.UILayer/Views/Shared/_NewAdminLayout.cshtml
@@ -26,23 +26,11 @@
                 <div class="content">
                     <div class="women_main">
                         <div class="w_content">
-                            <div class="women">
-                                <a href="#"><h4>Enthecwear - <span>4449 items</span> </h4></a>
-                                <ul class="w_nav">
-                                    <li>Sort : </li>
-                                    <li><a class="active" href="#">popular</a></li> |
-                                    <li><a href="#">new </a></li> |
-                                    <li><a href="#">discount</a></li> |
-                                    <li><a href="#">price: Low High </a></li>
-                                    <div class="clear"></div>
-                                </ul>
-                                <div class="clearfix"></div>
-                            </div>
                             @RenderBody()
                         </div>
                         <div class="clearfix"></div>
-                        @Html.Partial("/Views/Admin/PartialSubscribe.cshtml")
-                        @Html.Partial("/Views/Admin/PartialFooter.cshtml")
+                        @*@Html.Partial("/Views/Admin/PartialSubscribe.cshtml")
+                @Html.Partial("/Views/Admin/PartialFooter.cshtml")*@
                     </div>
                 </div>
             </div>
