--- a/Logistics.UILayer/Views/Admin/PartialSidebar.cshtml
+++ b/Logistics.UILayer/Views/Admin/PartialSidebar.cshtml
@@ -12,10 +12,10 @@
             <li id="menu-academico"><a href="/Profile/Index"><i class="fa fa-file-text-o"></i> <span>Profilim +</span></a></li>
             <li id="menu-academico"><a href="/City/Index"><i class="lnr lnr-book"></i> <span>Şehirler +</span></a></li>
             <li><a href="/Order/Index"><i class="lnr lnr-envelope"></i> <span>Siparişler +</span></a></li>
-            <li><a href="products.html"><i class="lnr lnr-chart-bars"></i> <span>Ülkeler</span></a></li>
-            <li><a href="products.html"><i class="lnr lnr-chart-bars"></i> <span>Grafikler</span></a></li>
-            <li><a href="products.html"><i class="lnr lnr-chart-bars"></i> <span>Raporlar</span></a></li>
-            <li><a href="products.html"><i class="lnr lnr-chart-bars"></i> <span>Roller</span></a></li>
+            <li><a href="/Message/Inbox"><i class="lnr lnr-chart-bars"></i> <span>Mesajlar Gelen +</span></a></li>
+            <li><a href="/Message/Outbox"><i class="lnr lnr-chart-bars"></i> <span>Mesajlar Giden +</span></a></li>
+            <li><a href="/Message/SendMessage"><i class="lnr lnr-chart-bars"></i> <span>Mesaj Gönder +</span></a></li>
+            <li><a href="/Map/Index"><i class="lnr lnr-chart-bars"></i> <span>Harita +</span></a></li>
             <li><a href="products.html"><i class="lnr lnr-thumbs-up "></i> <span>Ayarlar</span></a></li>
             <li><a href="products.html"><i class="lnr-pointer-down" aria-hidden="true"></i>    <span>Çıkış Yap</span></a></li>
 
